--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,60 @@
-pip~=25.1.1
-attrs~=25.1.0
-PySocks~=1.7.1
-idna~=3.10
-multidict~=6.1.0
-propcache~=0.3.0
-aiogram~=3.18.0
-typing_extensions~=4.12.2
-pydantic~=2.10.6
-aiofiles~=24.1.0
-magic-filter~=1.0.12
-certifi~=2025.1.31
-aiohttp~=3.11.12
-pydantic_core~=2.27.2
-yarl~=1.18.3
-aiosignal~=1.3.2
-frozenlist~=1.5.0
-aiohappyeyeballs~=2.4.6
-annotated-types~=0.7.0
+aiofiles==24.1.0
+aiogram==3.18.0
+aiohappyeyeballs==2.4.6
+aiohttp==3.11.12
+aiosignal==1.3.2
+annotated-types==0.7.0
+anyio==4.9.0
+asgiref==3.8.1
+attrs==25.1.0
+beautifulsoup4==4.13.3
+blinker==1.9.0
+certifi==2025.1.31
+cffi==1.17.1
+charset-normalizer==3.4.1
+click==8.1.8
+colorama==0.4.6
+deep-translator==1.11.4
+Django==5.1.7
+Flask==3.1.1
+frozenlist==1.5.0
+googletrans==4.0.2
+gTTS==2.5.4
+h11==0.14.0
+h2==4.2.0
+hpack==4.1.0
+httpcore==1.0.8
+httpx==0.28.1
+hyperframe==6.1.0
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.6
+magic-filter==1.0.12
+MarkupSafe==3.0.2
+multidict==6.1.0
+outcome==1.3.0.post0
+packaging==25.0
+propcache==0.3.0
+pycparser==2.22
+pydantic==2.10.6
+pydantic_core==2.27.2
+PySocks==1.7.1
+python-dotenv==1.1.0
+requests==2.32.3
+selenium==4.32.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
+soupsieve==2.6
+sqlparse==0.5.3
+trio==0.30.0
+trio-websocket==0.12.2
+typing_extensions==4.12.2
+tzdata==2025.2
+urllib3==2.3.0
+webdriver-manager==4.0.2
+websocket-client==1.8.0
+Werkzeug==3.1.3
+wikipedia==1.4.0
+wsproto==1.2.0
+yarl==1.18.3
+yt-dlp==2025.2.19
